Added getAllExamples endpoint
